--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,156 @@
-/* Inserta tu código aqui */
-* {
-    outline:1px  solid red ;
+outline: 1px solid #333
+body{
+    font-family: sans-serif;
 }
-
 header{
-background:black;
+    background: black;
+    color: white;
 }
-
 header img{
-    width: 80px;
-}s
+    width: 150px;
+}
 header .list-menu{
-    margin:0px;
-    padding: 0px;
-    list-style: none;
-    text-align: center;
-} 
-header .list-menu .li
-{
-display: inline-block;
-}
-header .list-menu a
-{
-color:5px 10px;
-padding: ;
-display: block;
-}
-.list-episodes
-{
-background: #FFF;
-}
- .last-episodes .list-episodes
- {
-    width:100px;
- }
-.last-episodes p
-{
-text-align: center;
-}
-.list-contenido
-{
     list-style: none;
     margin: 0px;
     padding: 0px;
-
+   text-align: right;
+      
 }
- .list-contenido li
- {
+header .list-menu li{
+    display: inline-block;
+}
+header .list-menu a{
+    display: block;
+    color: white;
+    padding: 5px 10px;
+    text-decoration: none;
+    position: relative;
+    top: 70px;
+    padding: 9px 9px;
+   
+}
+.last-episodios{
+    background-color: #EFF1F3;
+    border-bottom: 2px solid darkgray;
+}
+.last-episodios .list-episodios img{
+    width: 100%;
+}
+row list-episodios img{
+    width: 100%;
+    
+}
+.last-episodios .list-episodios p{
+    text-align: center;
+    color: #3D9AD4;
+    font-size: 20px;
+    font-family: georgia;
+    padding: 5px;
+}
+h1{
+    font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+h1 a{
+    font-size: 20px;
+    text-decoration: none;
+    color: #3D9AD4;
+}
+.contenido{
+    margin-top: 40px;
+}
+.lista-contenido{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    vertical-align: top; 
+    
+}
+.lista-contenido li{
     display: inline-block;
     width: 109px;
-    margin: 0 10px 0 10px;
-    text-align: top;
-
- }
- .list-contenido img
- {
+    margin: 0px 10px 10px 0px;
+    vertical-align: top;
+    
+}
+.lista-contenido li p{
+    color: #3D9AD4;
+    font-family: georgia;
+    text-align: center;
+}
+.lista-contenido li img{
     width: 100%;
- }
- .navigation h3
- {
-  border-bottom: 1px solid;
-  margin: 10px 0;
-
- }
- .navigation ul
- {
-    list-style: none;
-    margin: 0px;
+}
+.link-navegacion li img{
+    width: 20px;
     padding: 0px;
- }
-  .navigation ul img
-  {
-    margin-right: 10px;
-  }
- .navigation ul a 
- {
-text-decoration: none;
-color: blue;
- }
+}
+.link-navegacion h3{
+    border-bottom: 2px solid #ccc;
+    margin: 10px 0;
+    border-bottom: 2px solid darkgray;
+    font-size: 25px;
+    
+}
+.link-navegacion ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-top: 5px;
+}
+.link-navegacion a{
+    text-decoration: none;
+    color: #3D9AD4;
+    font-family: sans-serif;
+    font-size: 18px;
+    padding: 8px;
+    padding-top: 20px;
+    
+}
+h3.sin-titulo{
+    border-bottom: 3px solid darkgray;
+}
+.link-navegacion .parrafo{
+    font-family: georgia;
+    font-size: 20px;
+    padding-top: 10px;
+    
+}
+footer{
+    background: #808080;
+    padding: 70px;
+}
+.pie-pagina p{
+    color: white;
+    font-size: 20px;
+    padding-left: 30px;
+    padding-right: 25px;
+    padding-bottom: 10px;
+    font-family: arial;
+}
+.pie-pagina p a{
+    text-decoration: none;
+    color: #c0c0c0;
+    font-size: 20px;
+}
+.pie-pagina .link-pagina li{
+    list-style: none;
+    display: inline-block;
+    position: relative;
+    left: 260px;
+    padding: 10px;
+}
+.pie-pagina .link-pagina li a{
+    text-decoration: none;
+    color: #c0c0c0;
+    font-size: 18px;
+}
+  
+.pie-pagina .link{
+    color: #a8a3a3c;
+    text-align: center;
+    font-size: 16px;
+    position: relative;
+    left: 320px;
+}
